0.6.3 /
[Alexandr Topilski]
- [Redis] Commands update
- [SSDB] Up sources to version 1.9.3

0.6.2 / May 7, 2016
[Alexandr Topilski]
- [Redis] Sentinel support

0.6.1 / April 30, 2016
[Alexandr Topilski]
- [Memcached] Not connected to server, impossible to get discovery info #4
- Server roles
- Clear database
- Property to change font globally
- Config version
- Folders for connections
- Keys namespaces

0.5.8 / Fabruary 20, 2016
[Alexandr Topilski]
- [UnQLite] Save data propertly
- [UnQLite] Info command
- [LevelDB] Stable on windows
- [LMDB] Info command
- Commands refactoring
- Fix some memory leaks

0.5.7 / January 7, 2016
[Alexandr Topilski]
- [Redis] Redis cluster discovery button doesn't work with protected Redis configuration #59 
- [Redis] Edit existing connection settings doesn't show existing parameter values #58
- [Redis] Up hiredis sources to version 0.13.3
- [LMDB] Up sources to version 0.9.70
- [LevelDB] Up sources to version 1.18
- [SSDB] Up sources to version 1.9.2
- [UnQLite] Up sources to version 1.1.6
- [RocksDB] Up sources to version 4.4.0
- Fix close connection crash

0.5.6 / October 18, 2015
[Alexandr Topilski]
- Font selection for widgets
- Hex view for output data
- [Redis] HGETALL for hash values
- [Memcached] memcached connection fails with UNKNOWN READ #2 

0.5.5 / September 19, 2015
[Alexandr Topilski]
- Clear history
- Logging mseconds option
- Not able to view Graphical History Chart on Windows #5
- UnQLite database support http://unqlite.org/
- LMDB database support http://symas.com/mdb/
- Bugs fixes
- [SSDB] dbsize extend command
- [LevelDB] dbsize extend command
- [RocksDB] dbsize extend command
- i386 build for windows

0.3.5 / September 5, 2015
[Alexandr Topilski]
- Package installation fails on Ubuntu 14 #56
- RocksDB database support http://rocksdb.org/
- Added social buttons
- [SSDB] Ssdb auth command #54

0.2.5 / August 22, 2015
[Alexandr Topilski]
- Update hiredis sources
- Sentinel commands support for Redis